2006-07-06  Michael Koch  <mkoch@kaffe.org>

	* config/.cvsignore,
	external/gcc/fastjar/.cvsignore,
	include/.cvsignore,
	kaffe/kaffevm/boehm-gc/boehm/.cvsignore: Updated.
	* external/.cvsignore,
	external/gcc/.cvsignore,
	external/gcc/zlib/.cvsignore,
	kaffe/kaffevm/boehm-gc/.cvsignore,
	kaffe/kaffevm/boehm-gc/boehm/doc/.cvsignore,
	kaffe/kaffevm/boehm-gc/boehm/include/.cvsignore,
	kaffe/kaffevm/kaffe-gc/.cvsignore,
	kaffe/kaffevm/systems/drops-l4threads/.cvsignore,
	kaffe/kaffevm/verifier/.cvsignore,
	libraries/clib/awt/nano-X/.cvsignore,
	libraries/clib/nio/.cvsignore,
	libraries/clib/target/.cvsignore,
	libraries/clib/target/Linux/.cvsignore,
	libraries/clib/target/generic/.cvsignore,
	libraries/javalib/awt-implementations/.cvsignore,
	libraries/javalib/awt-implementations/kaffe/.cvsignore,
	libraries/javalib/external/classpath/.cvsignore,
	libraries/javalib/external/classpath/doc/.cvsignore,
	libraries/javalib/external/classpath/doc/api/.cvsignore,
	libraries/javalib/external/classpath/examples/.cvsignore,
	libraries/javalib/external/classpath/external/.cvsignore,
	libraries/javalib/external/classpath/external/relaxngDatatype/.cvsignore,
	libraries/javalib/external/classpath/external/sax/.cvsignore,
	libraries/javalib/external/classpath/external/w3c_dom/.cvsignore,
	libraries/javalib/external/classpath/gnu/classpath/.cvsignore,
	libraries/javalib/external/classpath/gnu/java/locale/.cvsignore,
	libraries/javalib/external/classpath/include/.cvsignore,
	libraries/javalib/external/classpath/lib/.cvsignore,
	libraries/javalib/external/classpath/lib/org/.cvsignore,
	libraries/javalib/external/classpath/native/.cvsignore,
	libraries/javalib/external/classpath/native/fdlibm/.cvsignore,
	libraries/javalib/external/classpath/native/jawt/.cvsignore,
	libraries/javalib/external/classpath/native/jni/.cvsignore,
	libraries/javalib/external/classpath/native/jni/classpath/.cvsignore,
	libraries/javalib/external/classpath/native/jni/gtk-peer/.cvsignore,