@@ -1,3 +1,8 @@
+2006-07-07  Michael Koch  <mkoch@kaffe.org>
+
+	* libraries/javalib/Makefile.am, libraries/javalib/Makefile.in:
+	Regenerated.
+
 2006-07-06  Michael Koch  <mkoch@kaffe.org>
 
 	* config/.cvsignore,
